gg-36475 Fix the illegal reflective access warnings issue